--- a/w/wo/wor/worldcasinodirectory.com.html
+++ b/w/wo/wor/worldcasinodirectory.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the worldcasinodirectory.com privacy policy that was archived on 2013-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131205083755id_/http%3A//www.worldcasinodirectory.com/wcdprivpol.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the worldcasinodirectory.com privacy policy that was archived on 2014-02-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140219013938id_/http%3A//www.worldcasinodirectory.com/wcdprivpol.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -9,7 +9,7 @@
 
 <!-- jquery -->
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
 
 
 <!-- JS -->
@@ -170,7 +170,7 @@ function clearDefault(a){if(a.defaultValue==a.value){a.value=""}};
    banner += "'></scr"+"ipt>";
    document.write(banner);
 //]]>-->
-</script><script type="text/javascript" src="https://online.worldcasinodirectory.com/ads/www/delivery/ajs.php?zoneid=1&amp;cb=94650128669&amp;charset=UTF-8&amp;loc=https%3A//web.archive.org/web/20131205083755id_/http%253A//www.worldcasinodirectory.com/wcdprivpol.htm"></script><noscript><a href='http://www.worldcasinodirectory.com/ads/www/delivery/ck.php?n=afe262a3&amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'><img  src='http://www.worldcasinodirectory.com/ads/www/delivery/avw.php?zoneid=1&amp;cb=INSERT_RANDOM_NUMBER_HERE&amp;n=afe262a3' border='0' alt='' /></a></noscript>
+</script><script type="text/javascript" src="https://online.worldcasinodirectory.com/ads/www/delivery/ajs.php?zoneid=1&amp;cb=47640848786&amp;charset=UTF-8&amp;loc=https%3A//web.archive.org/web/20140219013938id_/http%253A//www.worldcasinodirectory.com/wcdprivpol.htm"></script><noscript><a href='http://www.worldcasinodirectory.com/ads/www/delivery/ck.php?n=afe262a3&amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'><img  src='http://www.worldcasinodirectory.com/ads/www/delivery/avw.php?zoneid=1&amp;cb=INSERT_RANDOM_NUMBER_HERE&amp;n=afe262a3' border='0' alt='' /></a></noscript>
 
 </div>
 </div>
@@ -783,7 +783,7 @@ The SAFE Ports Act passed by the U.S. congress is affecting certain payment proc
  
 <br><br>
 
-©Copyright 2002-2012 World Casino Directory. All rights reserved.
+©Copyright 2002-2014 World Casino Directory. All rights reserved.
 <br><br>
 </span>
 
@@ -808,19 +808,6 @@ pageTracker._initData();
 pageTracker._trackPageview();
 </script>
 <!-- /Google Analytics -->
-
-<!-- LiveChat -->
-<!--script type="text/javascript">
-var __lc = Object.create(Object.prototype);
-__lc.license = 2213241;
-
-(function() {
-	var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
-	lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
-	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
-})();
-</script-->
-<!-- /LiveChat -->
 
 <!-- contentslider-->
 <script type="text/javascript" src="/layout/contentslider/contentslider.js" defer="defer">
