--- a/j/je/jem/jemsite.com.html
+++ b/j/je/jem/jemsite.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jemsite.com privacy policy that was archived on 2013-11-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131108112550id_/http%3A//www.jemsite.com/forums/faq.php%3Ffaq%3Dprivacy%23faq_statement) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jemsite.com privacy policy that was archived on 2014-02-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140219032146id_/http%3A//www.jemsite.com/forums/faq.php%3Ffaq%3Dprivacy%23faq_statement) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en"><head>
 <style>
@@ -32,7 +32,7 @@
 	text-align: left;
 }
 </style>
-<script type="text/javascript" async="" src="//api.viglink.com/api/vglnk.js"></script><script defer="" src="//tag.crsspxl.com/s1.js?d=1557"></script><script type="text/javascript">
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="//api.viglink.com/api/vglnk.js"></script><script defer="" src="//tag.crsspxl.com/s1.js?d=1557"></script><script type="text/javascript">
 function keebali_force_tags(){
 	tag_field = document.getElementById('tag_add_input');
 	if (tag_field.value == ''){
@@ -375,7 +375,7 @@ h1 {
 <script type="text/javascript">
 <!--
 var SESSIONURL = "";
-var SECURITYTOKEN = "a6692e4c1c520c27c0514908b55b4ba1c865d99a";
+var SECURITYTOKEN = "98e2c55c13aa85739f9bc40277ccbf2677d2697c";
 var IMGDIR_MISC = "http://www.jemsite.com/forums/images/misc";
 var vb_disable_ajax = parseInt("0", 10);
 // -->
@@ -511,7 +511,7 @@ var topticker = true</script>
    if (document.context) document.write ("&context=" + escape(document.context));
    if (document.mmm_fo) document.write ("&amp;mmm_fo=1");
    document.write ("'><\/scr"+"ipt>");
-//]]>--></script><script type="text/javascript" src="https://d1.openx.org/ajs.php?zoneid=5084&amp;cb=864861443&amp;charset=windows-1252&amp;loc=https%3A//web.archive.org/web/20131108112550id_/http%253A//www.jemsite.com/forums/faq.php%253Ffaq%253Dprivacy%2523faq_statement"></script>
+//]]>--></script><script type="text/javascript" src="https://d1.openx.org/ajs.php?zoneid=5084&amp;cb=5818414804&amp;charset=windows-1252&amp;loc=https%3A//web.archive.org/web/20140219032146id_/http%253A//www.jemsite.com/forums/faq.php%253Ffaq%253Dprivacy%2523faq_statement"></script>
 		</div>
                         </div>
                                                                         <div class="clr"></div>
@@ -595,7 +595,7 @@ function log_out()
         </tr>
         </tbody></table>
         <input type="hidden" name="s" value="">
-                <input type="hidden" name="securitytoken" value="a6692e4c1c520c27c0514908b55b4ba1c865d99a">
+                <input type="hidden" name="securitytoken" value="98e2c55c13aa85739f9bc40277ccbf2677d2697c">
 	        <input type="hidden" name="do" value="login">
 	        <input type="hidden" name="vb_login_md5password">
 	        <input type="hidden" name="vb_login_md5password_utf">
@@ -796,10 +796,10 @@ We or our assets may be acquired and in such case, we cannot guarantee that this
 <br>
 
 
-Sitemap:<a href="http://www.jemsite.com/forums/sitemap/f-10.html">1</a> <a href="http://www.jemsite.com/forums/sitemap/f-11.html">2</a> <a href="http://www.jemsite.com/forums/sitemap/f-13.html">3</a> <a href="http://www.jemsite.com/forums/sitemap/f-14.html">4</a> <a href="http://www.jemsite.com/forums/sitemap/f-15.html">5</a> <a href="http://www.jemsite.com/forums/sitemap/f-16.html">6</a> <a href="http://www.jemsite.com/forums/sitemap/f-17.html">7</a> <a href="http://www.jemsite.com/forums/sitemap/f-18.html">8</a> <a href="http://www.jemsite.com/forums/sitemap/f-19.html">9</a> <a href="http://www.jemsite.com/forums/sitemap/f-20.html">10</a> <a href="http://www.jemsite.com/forums/sitemap/f-21.html">11</a> <a href="http://www.jemsite.com/forums/sitemap/f-22.html">12</a> <a href="http://www.jemsite.com/forums/sitemap/f-23.html">13</a> <a href="http://www.jemsite.com/forums/sitemap/f-24.html">14</a> <a href="http://www.jemsite.com/forums/sitemap/f-25.html">15</a> <a href="http://www.jemsite.com/forums/sitemap/f-26.html">16</a> <a href="http://www.jemsite.com/forums/sitemap/f-27.html">17</a> <a href="http://www.jemsite.com/forums/sitemap/f-28.html">18</a> <a href="http://www.jemsite.com/forums/sitemap/f-29.html">19</a> <a href="http://www.jemsite.com/forums/sitemap/f-30.html">20</a> <a href="http://www.jemsite.com/forums/sitemap/f-31.html">21</a> <a href="http://www.jemsite.com/forums/sitemap/f-33.html">22</a> <a href="http://www.jemsite.com/forums/sitemap/f-34.html">23</a> <a href="http://www.jemsite.com/forums/sitemap/f-35.html">24</a> <a href="http://www.jemsite.com/forums/sitemap/f-36.html">25</a> <a href="http://www.jemsite.com/forums/sitemap/f-37.html">26</a> <a href="http://www.jemsite.com/forums/sitemap/f-40.html">27</a> <a href="http://www.jemsite.com/forums/sitemap/f-44.html">28</a> 
+Sitemap:<a href="http://www.jemsite.com/forums/sitemap/f-10.html">1</a> <a href="http://www.jemsite.com/forums/sitemap/f-11.html">2</a> <a href="http://www.jemsite.com/forums/sitemap/f-13.html">3</a> <a href="http://www.jemsite.com/forums/sitemap/f-14.html">4</a> <a href="http://www.jemsite.com/forums/sitemap/f-15.html">5</a> <a href="http://www.jemsite.com/forums/sitemap/f-16.html">6</a> <a href="http://www.jemsite.com/forums/sitemap/f-17.html">7</a> <a href="http://www.jemsite.com/forums/sitemap/f-18.html">8</a> <a href="http://www.jemsite.com/forums/sitemap/f-19.html">9</a> <a href="http://www.jemsite.com/forums/sitemap/f-20.html">10</a> <a href="http://www.jemsite.com/forums/sitemap/f-21.html">11</a> <a href="http://www.jemsite.com/forums/sitemap/f-22.html">12</a> <a href="http://www.jemsite.com/forums/sitemap/f-23.html">13</a> <a href="http://www.jemsite.com/forums/sitemap/f-24.html">14</a> <a href="http://www.jemsite.com/forums/sitemap/f-25.html">15</a> <a href="http://www.jemsite.com/forums/sitemap/f-26.html">16</a> <a href="http://www.jemsite.com/forums/sitemap/f-27.html">17</a> <a href="http://www.jemsite.com/forums/sitemap/f-28.html">18</a> <a href="http://www.jemsite.com/forums/sitemap/f-29.html">19</a> <a href="http://www.jemsite.com/forums/sitemap/f-30.html">20</a> <a href="http://www.jemsite.com/forums/sitemap/f-31.html">21</a> <a href="http://www.jemsite.com/forums/sitemap/f-33.html">22</a> <a href="http://www.jemsite.com/forums/sitemap/f-34.html">23</a> <a href="http://www.jemsite.com/forums/sitemap/f-35.html">24</a> <a href="http://www.jemsite.com/forums/sitemap/f-36.html">25</a> <a href="http://www.jemsite.com/forums/sitemap/f-37.html">26</a> <a href="http://www.jemsite.com/forums/sitemap/f-40.html">27</a> <a href="http://www.jemsite.com/forums/sitemap/f-44.html">28</a> <a href="http://www.jemsite.com/forums/sitemap/f-52.html">29</a> 
 
 <br>
-<div class="smallfont" align="center">All times are GMT -4. The time now is <span class="time">07:17 AM</span>.</div>
+<div class="smallfont" align="center">All times are GMT -4. The time now is <span class="time">11:13 PM</span>.</div>
 <br>
 
 
@@ -848,7 +848,7 @@ Sitemap:<a href="http://www.jemsite.com/forums/sitemap/f-10.html">1</a> <a href=
 <div align="center">
 	<div class="smallfont" align="center">
 	<!-- Do not remove this copyright notice -->
-	Powered by vBulletin® Version 3.7.0<br>Copyright ©2000 - 2013, Jelsoft Enterprises Ltd.
+	Powered by vBulletin® Version 3.7.0<br>Copyright ©2000 - 2014, Jelsoft Enterprises Ltd.
 	<!-- Do not remove this copyright notice -->
 	</div>
 	
@@ -859,6 +859,11 @@ Sitemap:<a href="http://www.jemsite.com/forums/sitemap/f-10.html">1</a> <a href=
 	
 	(c) jemsite.com
 	</div>
+<div class="smallfont" align="center">
+<div style="display:inline-block; font-family:Georgia,serif;  font-size:10; width:100; height:15; border:0; ">Powered by 
+  <div style="display:inline; font-family:Arial, cursive, sans-serif;"><a href="http://www.caspion.com">CASPION</a></div>
+</div>
+</div>
 </div>
 
 </form>
@@ -882,7 +887,18 @@ Sitemap:<a href="http://www.jemsite.com/forums/sitemap/f-10.html">1</a> <a href=
              '//cdn.viglink.com/api') + '/vglnk.js';
     var r = d.getElementsByTagName(t)[0]; r.parentNode.insertBefore(s, r);
   }(document, 'script'));
-</script>										                                                                                                                                                                <div id="bottom">
+</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-45635563-24', 'jemsite.com');
+  ga('send', 'pageview');
+
+</script>
+										                                                                                                                                                                <div id="bottom">
                                                                                         <div class="corner_1">
                                                                                                 <div class="corner_2">
                                                                                                         <jdoc:include type="modules" name="bottom" style="xhtml">                                                                                                        <div class="clr"></div>
