--- a/4/49/49e/49erswebzone.com.html
+++ b/4/49/49e/49erswebzone.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 49erswebzone.com privacy policy that was archived on 2012-03-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20120304153300id_/http%3A//www.skybox360.com/privacy.php%3Fsite%3D49erswebzone.com) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 49erswebzone.com privacy policy that was archived on 2014-02-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140219034913id_/http%3A//www.skybox360.com/privacy.php%3Fsite%3D49erswebzone.com) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>49erswebzone.com Privacy Policy</title>
@@ -13,7 +13,7 @@
 <h2>Privacy Statement</h2>
 
 <p>We are committed to safeguarding your privacy online. This privacy policy applies to your information that we collect and receive only. We are not responsible for the practices of businesses that we do not own or control nor are we responsible for individuals not employed by us. At no time will we sell your information or release your personally-identifiable data without your permission. You can visit this Site without revealing who you are or providing any personal information about yourself.</p>
-<p>By using this Site, you agree to the terms of this privacy policy. Please read the following policy to understand how your personal information will be treated as you use our services. The following discloses our information gathering and dissemination practices.</p>
+<p>By using this Site, you agree to the terms of this privacy policy. Please read the following policy to understand how your personal information will be treated as you use our services. The following discloses our information gathering and dissemination practices. If you do not agree to this privacy policy, please do not use our sites or services.</p>
 <p>This Site contains links to other sites. These include links to resources in related topics and third-party sites that offer other related products. If you visit another website through a link on our site, please consult the privacy policy of the website you are visiting. We are not responsible for the privacy practices or the content of other websites that you may visit.</p>
 
 <h2>Browsing the Site</h2>
@@ -34,9 +34,9 @@
 <p>We collect any information that you are willing to volunteer within certain sections of our Site such as our forums. This information is collected during the voluntary registration process. This information may include, but is not limited to, the following:</p>
 <ul>
 	<li>All of the information already specified within the 'Browsing the Site' section,</li>
-	<li>Your name,</li>
+	<li>Contact information,</li>
 	<li>Your email address, and</li>
-	<li>Optional information such as you location, birthday or website</li>
+	<li>Optional information such as, but not limited to, your name, location, birthday, information from social media interactions or website</li>
 </ul>
 <p>We may collect the email addresses of consumers who communicate with us or through our authorized vendors via email.</p>
 <p>Any information provided by consumers becomes our property once received by us and may be used and disclosed as permitted in this Policy.</p>
@@ -46,13 +46,17 @@
 
 <p>If you choose to transmit, submit or post information through the Site's chat rooms, bulletin boards, other forums (the "Forums"), or other interactive features, we will collect that information you provide. We retain this information as necessary to resolve disputes, provide customer support and troubleshoot problems as permitted by law and pursuant to our Terms of Use.</p>
 
+<h2>User Generated Content</h2>
+
+<p>You may choose to publicly disclose personal information about yourself and others in the course of (i) contributing user generated content (for instance articles, blogs, reviews or podcasts), (ii) communicating with others in our online forums, communities or chat rooms, (iii) creating user profiles for public view, or (iv) posting images, photos or videos. Be aware that information which is voluntarily disclosed in any of these areas of this Site is unencrypted, public information and therefore, there can be no expectation of privacy or confidentiality. Any personal information you submit in the course of interacting in these public activities can be read, collected, or used by other users. We are not responsible for the personal information you choose to make public in any of these areas.</p>
+
 <h2>Cookies</h2>
 
 <p>We may place "cookies" on your personal computer. "Cookies" are small identifiers sent from a web server and stored on your computer's hard drive  that help us to recognize you if you visit our website again. Also, our site uses cookies to track how you found our site. Cookies are not designed to be used to get data from your hard drive, your e-mail or any other personal data about you. To protect your privacy, we do not use cookies to store or transmit any personal information about you on the Internet. You can reject cookies by changing your browser settings. Please note, however, that if you reject our cookies, it is possible that some web pages may not properly load, your access to certain information might be denied or you might have to enter information about yourself more than once.</p>
 
 <h2>Security</h2>
 
-<p>This site has reasonable security measures in place to protect the loss, misuse and alteration of the information under our control.</p>
+<p>This site has reasonable security measures in place to protect against unauthorized access, disclosure, loss, misuse and alteration of the information under our control. However, no method of transmission over the Internet, or method of electronic storage, is 100% secure. We cannot assume responsibility or liability for unauthorized access to our servers and systems.</p>
 
 <h2>Third Party Advertising</h2>
 
@@ -60,13 +64,21 @@
 <p>In the course of serving advertisements to this site, our third-party advertiser may place or recognize a unique cookie on your browser. Specifically, Google, as a third party vendor, uses cookies to serve ads on this website. Google´s use of the DART cookie enables it to serve ads to you based on your visit to this website and other websites on the Internet. You may opt out of the use of the DART cookies by visiting the Google ad and content network <a href="http://www.google.com/privacy_ads.html" rel="nofollow">privacy policy</a>.</p>
 <p>In addition, we use clear GIFs or pixel tags to help manage our online advertising. These clear GIFs enable our ad serving company to recognize a browser's cookie when a browser visits this site. This allows us to learn which banner ads bring users to our website. The information we collect and share through this technology is not personally identifiable.</p>
 
+<h2>Linked Websites and Services</h2>
+
+<p>Our sites and services may link to other sites or services operated by affiliates or third parties, and may carry advertisements or offer content, functionality, newsletters, contests or sweepstakes, or applications developed and maintained by third parties. We do not exercise control over third party sites. We are not responsible for the privacy practices of any such third parties. Once you leave this Site or its services via a link, enable a third-party service, or click an advertisement, you should check the applicable privacy policy of the third-party's site. The fact that we link to a website or present a banner ad or other type of advertisement is not an endorsement, authorization or representation of our affiliation with that third party, nor is it an endorsement of their privacy or information security policies or practices.</p>
+<p>We may also provide social media features on our sites and services that enable you to share personal information with your social network(s) and to interact with this Site and its services. Depending on the features, your use of these features may result in the collection or sharing of personal information about you. We encourage you to review the privacy policies and settings on the social media site(s) with which you interact.</p>
+
+<h2>Children's Privacy</h2>
+<p>This Site and its services are intended for general audiences and are not targeted toward children under the age of 13. We do not knowingly collect personal information from children under the age of 13. If you are under 13, DO NOT disclose or provide any information on this Site or within any of its services.</p>
+
 <h2>Contacting the Web Site</h2>
 
 <p>Please be aware that we may change our Privacy Policy from time to time. If we do, we will update this Privacy Policy at our website, so be sure to check back here frequently.</p>
 <p>If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this Web site, you can contact: contact@skybox360.com.</p>
 
-<p>49erswebzone.com - Property of <a href="http://www.skybox360.com/">Skybox 360 Media</a></p>
-January 28, 2011
+<p>49erswebzone.com - Property of <a href="http://www.skybox360.com/">Skybox 360 Media, LLC</a></p>
+Last updated September 4, 2013
 
 
 
