--- a/i/in/int/internetcorkboard.com.html
+++ b/i/in/int/internetcorkboard.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the internetcorkboard.com privacy policy that was archived on 2013-11-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131115053402id_/http%3A//www.internetcorkboard.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the internetcorkboard.com privacy policy that was archived on 2014-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140220063816id_/http%3A//www.internetcorkboard.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns:meebo="http://www.meebo.com/"><head>
 
@@ -7,8 +7,8 @@
 <meta http-equiv="Content-Language" content="EN">
 <title>Privacy Policy</title>
 <meta name="description" content="This is the privacy policy for Internet Corkboard.">
-<link rel="stylesheet" type="text/css" href="http://files.internetcorkboard.com/css/minify/frame@global@else!2013110117.css">
-<script type="text/javascript" async="" src="https://secure-cdn.mplxtms.com/s/MasterTMS.min.js#491"></script><script async="" type="text/javascript" src="//dpp750yjcl65g.cloudfront.net/m/valueclickbrands/ae.js"></script><script type="text/javascript" src="http://files.internetcorkboard.com/js/minify/jquery@main!2013110117.js"></script>
+<link rel="stylesheet" type="text/css" href="http://files.internetcorkboard.com/css/minify/frame@global@else!20140213.css">
+<script type="text/javascript" async="" src="https://secure-cdn.mplxtms.com/s/MasterTMS.min.js#491"></script><script async="" type="text/javascript" src="//dpp750yjcl65g.cloudfront.net/m/valueclickbrands/ae.js"></script><script type="text/javascript" src="http://files.internetcorkboard.com/js/minify/jquery@main!20140213.js"></script>
 <!--[if ie]>
 <link href="http://files.internetcorkboard.com/css/IE.css" type="text/css" rel="stylesheet" />
 <![endif]-->
@@ -62,11 +62,7 @@ function getRenderedAds(type){
 
 
 <!-- Yieldbot.com Intent Tag -->
-<script type="text/javascript" src="http://cdn.yb0t.com/js/yieldbot.intent.js"></script>
-<script type="text/javascript">
-yieldbot.pub('0992');
-yieldbot.go();
-</script>
+
 <!-- END Yieldbot.com Intent Tag -->
 
 
@@ -86,8 +82,8 @@ yieldbot.go();
   <div class="headerR">
       <div class="menu">
                     <ul>
-                        <li class="border  ">
-                <a href="/">Home</a></li>
+                        <li class="border  selected">
+                <a href=""></a></li>
 			            <li class="border  ">
                 <a href="/internet-service-providers/">ISP</a></li>
 			            <li class="border  ">
@@ -172,16 +168,16 @@ yieldbot.go();
 
 			
 	
-			<li> <address>Copyright © 2013, InternetCorkboard.com</address></li>
+			<li> <address>Copyright © 2014, InternetCorkboard.com</address></li>
 		</ul>
    </div>
 
 <!-- start minify footer js -->
-<script type="text/javascript" src="http://files.internetcorkboard.com/js/minify/t!2013110117.js"></script>
+<script type="text/javascript" src="http://files.internetcorkboard.com/js/minify/t!20140213.js"></script>
 <!-- end minify footer js -->
 <script type="text/javascript">
-    var sessionId = '9a56e2436d672a6d567fe8bdfe756798';
-    var requestId = '8ff2419dc7fa23a65cc2907db80aab41';
+    var sessionId = 'c9af511e08fc93b84dbae89736602e82';
+    var requestId = '9af9387cd87e6bee114427fa43091b84';
     track(requestId, sessionId);
 </script>
 
