--- a/t/te/ter/territoryahead.com.html
+++ b/t/te/ter/territoryahead.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the territoryahead.com privacy policy that was archived on 2013-08-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130816170632id_/http%3A//www.territoryahead.com/privacyandsecurity) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the territoryahead.com privacy policy that was archived on 2014-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140220104128id_/http%3A//www.territoryahead.com/privacyandsecurity) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 
@@ -7,7 +7,7 @@
 	
 
 <meta name="rating" content="general">
-<meta name="ncxcartid" content="20130805191416372313">
+<meta name="ncxcartid" content="20140220054128371570">
 <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
 <meta http-equiv="EXPIRES" content="0">
 
@@ -34,6 +34,7 @@
    //$('#nvNew').hover(function(){ this.src = '/images/territory/globalnav04_on.gif'; }, function(){ this.src ='/images/territory/globalnav04_off.gif'; });
 
 </script><link rel="stylesheet" href="/styles/territory/category.css" type="text/css" media="all">
+
 <link rel="stylesheet" href="/styles/global.css" type="text/css">
 <link rel="stylesheet" href="/styles/territory/styles.css" type="text/css">
 
@@ -50,7 +51,8 @@
 </head>
 <body>
 <div id="wrap">
-	<div id="headerwrap">
+	
+<div id="headerwrap">
 	<div id="hdrblock">
 		<div class="login">&nbsp;</div>
 		<div class="cart"><table border="0" cellspacing="0" cellpadding="0" id="navtbl">
@@ -78,6 +80,8 @@
 					</td>
 				</tr></tbody></table>
 				</div></div></div>
+
+
 
 	<div id="topnav"><table border="0" cellspacing="0" cellpadding="0" width="1000"><tbody><tr><td style="padding-left:10px;">&nbsp;</td>
 		<td width="77px"><a href="/category/601/mens"><img src="/images/territory/TA_Header_Fall2013_14.gif" border="0"></a></td>
@@ -378,6 +382,11 @@ _gaq.push(['_trackPageview']);
 
 	<script type="text/javascript" src="/js/criteo_ld.js" async="true"></script>
 	
+
+<!-- Customer   -->
+
+
+
 </div>
 
 
