--- a/h/ho/hoa/hoax-slayer.com.html
+++ b/h/ho/hoa/hoax-slayer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hoax-slayer.com privacy policy that was archived on 2013-10-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131012170939id_/http%3A//www.hoax-slayer.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hoax-slayer.com privacy policy that was archived on 2014-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140220121712id_/http%3A//www.hoax-slayer.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>Privacy Policy</title>
@@ -12,6 +12,7 @@
 <body>
 <link rel="stylesheet" type="text/css" href="slayer2.css">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.hoax-slayer.com/newinfo.xml">
+<link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.hoax-slayer.com/privacy.html">
 <link rel="shortcut icon" href="images/favicon.ico">
 
 
@@ -192,29 +193,27 @@ As an Internet user, online privacy is an important issue for me, in respect to 
 <!--BEGIN FOOTER -->
 
 <div class="footer">
-<a href="#TOP" class="norm">[TOP]</a><br><br>
-[<a href="http://www.hoax-slayer.com/" class="norm" title="Latest Email Hoaxes - Current Internet Scams - Hoax-Slayer Newsletter">Home</a>]
-[<a href="http://www.hoax-slayer.com/latest-information.html" class="norm" title="Latest Information">Latest Information</a>]
-[<a href="http://www.hoax-slayer.com/current-issue.html" class="norm" title="Current Newsletter">Current Newsletter</a>]
-[<a href="http://www.hoax-slayer.com/previous-issues.html" class="norm" title="Previous Newsletters">Previous Newsletters</a>]
-[<a href="http://www.hoax-slayer.com/email-hoax-archive.html" class="norm" title="Email Hoaxes">Email Hoaxes</a>]<br>
-[<a href="http://www.hoax-slayer.com/internet-scams.html" class="norm" title="Internet Scams">Internet Scams</a>]
-[<a href="http://www.hoax-slayer.com/true-emails.html" class="norm" title="True Emails">True Emails</a>]
-[<a href="http://www.hoax-slayer.com/software-reviews.html" class="norm" title="Software Reviews">Software Reviews</a>]
-[<a href="http://www.hoax-slayer.com/spam-control.html" class="norm" title="Spam Control">Spam Control</a>]
-[<a href="http://www.hoax-slayer.com/computer-security.html" class="norm" title="Computer Security">Computer Security</a>]<br>
-[<a href="http://www.hoax-slayer.com/internet-resources.html" class="norm" title="Internet Resources">Internet Resources</a>]
-[<a href="http://www.hoax-slayer.com/privacy.html" class="norm" title="Privacy">Privacy</a>]
-[<a href="http://www.hoax-slayer.com/about.html" class="norm" title="About">About</a>]
-[<a href="http://www.hoax-slayer.com/hoax-slayer-site-map.html" class="norm" title="Site Map">Site Map</a>]
-[<a href="http://www.hoax-slayer.com/site-search.html" class="norm" title="Site Search -Search Hoax-Slayer">Search</a>]
-[<a href="http://www.hoax-slayer.com/faq.html" class="norm" title="FAQ">FAQ</a>]
+<a href="http://www.hoax-slayer.com/" class="foot" title="Latest Email Hoaxes - Current Internet Scams - Hoax-Slayer Newsletter">Home</a>
+<a href="http://www.hoax-slayer.com/latest-information.html" class="foot" title="Latest Information">Latest Information</a>
+<a href="http://www.hoax-slayer.com/current-issue.html" class="foot" title="Current Newsletter">Current Newsletter</a>
+<a href="http://www.hoax-slayer.com/previous-issues.html" class="foot" title="Previous Newsletters">Previous Newsletters</a>
+<a href="http://www.hoax-slayer.com/email-hoax-archive.html" class="foot" title="Email Hoaxes">Email Hoaxes</a><br>
+<a href="http://www.hoax-slayer.com/internet-scams.html" class="foot" title="Internet Scams">Internet Scams</a>
+<a href="http://www.hoax-slayer.com/true-emails.html" class="foot" title="True Emails">True Emails</a>
+<a href="http://www.hoax-slayer.com/software-reviews.html" class="foot" title="Software Reviews">Software Reviews</a>
+<a href="http://www.hoax-slayer.com/spam-control.html" class="foot" title="Spam Control">Spam Control</a>
+<a href="http://www.hoax-slayer.com/computer-security.html" class="foot" title="Computer Security">Computer Security</a><br>
+<a href="http://www.hoax-slayer.com/internet-resources.html" class="foot" title="Internet Resources">Internet Resources</a>
+<a href="http://www.hoax-slayer.com/privacy.html" class="foot" title="Privacy">Privacy</a>
+<a href="http://www.hoax-slayer.com/about.html" class="foot" title="About">About</a>
+<a href="http://www.hoax-slayer.com/hoax-slayer-site-map.html" class="foot" title="Site Map">Site Map</a>
+<a href="http://www.hoax-slayer.com/site-search.html" class="foot" title="Site Search -Search Hoax-Slayer">Search</a>
+<a href="http://www.hoax-slayer.com/faq.html" class="foot" title="FAQ">FAQ</a>
 <br><br>
 <div style="background-color:black; border: solid; border-color:red; border-width:2px;"><br>
-<a href="http://www.hoax-slayer.com/" class="nav" title="Latest Email Hoaxes - Current Internet Scams - Hoax-Slayer Newsletter">
+<a href="http://www.hoax-slayer.com/" class="foottitle" title="Latest Email Hoaxes - Current Internet Scams - Hoax-Slayer Newsletter">
 Latest Email Hoaxes - Current Internet Scams - Hoax-Slayer Newsletter</a><br><br></div>
-<br>© Brett M.Christensen, 2013 All Rights Reserved<br>
-[<a href="http://www.hoax-slayer.com/submit-material.html" class="norm" title="Contact the Webmaster">Contact</a>]<br>
+<br>© Brett M.Christensen, 2014 All Rights Reserved<br>
 </div>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -224,7 +223,8 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-2894616-2");
 pageTracker._trackPageview();
 </script>
-
+<br>
+<div align="center"><a href="http://m.hoax-slayer.com/privacy.html" title="Mobile Hoax-Slayer" class="norm">Go to Mobile Version</a></div><br>
 
 <!--END FOOTER -->
 </div>
