--- a/r/rp/rpg/rpgmakerweb.com.html
+++ b/r/rp/rpg/rpgmakerweb.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rpgmakerweb.com privacy policy that was archived on 2013-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131231102005id_/http%3A//www.rpgmakerweb.com/company/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rpgmakerweb.com privacy policy that was archived on 2014-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140220153510id_/http%3A//www.rpgmakerweb.com/company/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
     <script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script src="//cdn.optimizely.com/js/51877265.js"></script>
@@ -111,6 +111,7 @@
           <li><a href="/languages/de">Deutsch</a></li>
           <li><a href="/languages/fr">français</a></li>
           <li><a href="/languages/it">italiano</a></li>
+          <li><a href="/br">Português</a></li>
           <!--<li><a href="/languages/zh">中国的</a></li>-->
         </ul>
       </div>
@@ -209,6 +210,7 @@
                             <li><a href="/download/additional/sample-games">Sample Games</a></li>
                             <li><a href="/download/additional/other-materials">Other Materials</a></li>
                             <li><a href="/download/additional/run-time-packages">Run Time Packages</a></li>
+                            <li><a href="/download/additional/free-game-bundles/free-game-bundle-1">Free Game Bundle</a></li>
                           </ul>
                         </li>
                       </ul>
@@ -237,6 +239,7 @@
                         <li>
                           <a href="/support/information">Information</a>
                           <ul class="submenu">
+                            <li><a href="/in-the-news">In The News</a></li>
                             <li><a href="/support/information/comparisons">Comparisons</a></li>
                             <li><a href="/support/information/meet-the-team">Meet the Team</a></li>
                             <li><a href="/support/information/eula">EULA</a></li>
